<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/md_purple_50"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signin_guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_bt_gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_bt_gl_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_bt_gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_bt_gl_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />


<androidx.constraintlayout.widget.Guideline
    android:id="@+id/signin_guideline_top"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.42" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_gravity="center_horizontal"
    android:fontFamily="@font/baloo_bhaina"
    android:text="@string/text_signin_message"
    android:textAlignment="center"
    android:textColor="#696969"
    android:textSize="25sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/signin_guideline_bottom"
    app:layout_constraintEnd_toEndOf="@id/guideline9"
    app:layout_constraintStart_toStartOf="@id/guideline8"
    app:layout_constraintTop_toBottomOf="@+id/signin_guideline_top" />

<androidx.cardview.widget.CardView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/colorTextInputBackground"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp"
    app:layout_constraintBottom_toTopOf="@id/guideline10"
    app:layout_constraintEnd_toStartOf="@id/guideline3"
    app:layout_constraintStart_toEndOf="@id/guideline2"
    app:layout_constraintTop_toBottomOf="@id/guideline7">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_person"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="12dp"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.cardview.widget.CardView>


<androidx.cardview.widget.CardView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/colorTextInputBackground"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp"
    app:layout_constraintBottom_toTopOf="@id/guideline12"
    app:layout_constraintEnd_toStartOf="@id/guideline3"
    app:layout_constraintStart_toEndOf="@id/guideline2"
    app:layout_constraintTop_toBottomOf="@id/guideline11">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minWidth="320dp"
            android:minHeight="50dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tv_wrong_credentials"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_wrong_credentials"
        android:textAlignment="center"
        android:textColor="@color/md_red_500"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/login_bt_gl_top"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline12"
        >

    </TextView>
<Button
    android:id="@+id/button_signin"
    style="@style/Button1"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:text="@string/button_sign_in"
    app:layout_constraintBottom_toTopOf="@id/login_bt_gl_bottom"
    app:layout_constraintEnd_toStartOf="@id/guideline3"
    app:layout_constraintStart_toEndOf="@id/guideline2"
    app:layout_constraintTop_toBottomOf="@id/login_bt_gl_top"/>

<Button
    android:id="@+id/button_signup"
    style="@style/TextyButton"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:text="@string/text_signin_signup"
    app:layout_constraintBottom_toTopOf="@id/signup_bt_gl_bottom"
    app:layout_constraintEnd_toStartOf="@id/guideline9"
    app:layout_constraintStart_toEndOf="@id/guideline8"
    app:layout_constraintTop_toBottomOf="@id/signup_bt_gl_top"
    android:textSize="12sp"/>


<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.07" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_img_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.1" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.9" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.03" />

<TextView
    android:id="@+id/tv_title"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:fontFamily="@font/baloo_bhaina"
    android:gravity="center_horizontal"
    android:text="@string/app_desc"
    android:textAlignment="center"
    android:textColor="@color/md_yellow_800"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@+id/guideline5"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline4" />

<ImageView
    android:id="@+id/iv_img"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    app:layout_constraintBottom_toTopOf="@+id/img_guideline_bottom"
    app:layout_constraintEnd_toStartOf="@+id/guideline3"
    app:layout_constraintStart_toStartOf="@+id/guideline2"
    app:layout_constraintTop_toBottomOf="@+id/guideline_img_top"
    app:srcCompat="@drawable/app_logo_2" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/img_guideline_bottom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.3" />

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />


<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.3" />
<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>